# claude-explorer

./: .gitignore  README.md  install.bat  install.sh  pyproject.toml  run.sh
claude_explorer/: __init__.py  __main__.py  app.py
claude_explorer/data/: cache.py  models.py  parsers.py
claude_explorer/screens/: conversation.py  dashboard.py  file_history.py  plans.py  projects.py  search.py  sessions.py  settings.py  stats.py  todos.py
claude_explorer/styles/: app.tcss
